<resources>
    <string name="app_name">Beware</string>
    <string name="cambie_de_peso">Weight Change</string>
    <string name="title_cambie_de_peso">title_Wwight_Cambie</string>
    <string name="asi_vas_con_tu_peso">so_you_ go_with_your_weight</string>
    <string name="mi_nuevo_peso">my_new_weight</string>
    <string name="hint_peso">hint_weight</string>
    <string name="titlecambie_de_peso">Weight Of Change!!!</string>
    <string name="hintpeso">Weight</string>
    <string name="minuevo_peso">my new weight</string>
    <string name="asivas_con_tu_peso">so you go with your weight</string>
    <string name="password">password</string>
    <string name="passw">password</string>
    <string name="puntos_password">Digita</string>
    <string name="crear_cuenta">Create</string>
    <string name="hint_user">Write Your User</string>
    <string name="user">User</string>
    <string name="iniciar_sesion">login</string>
    <string name="title_inicio">Login</string>
    <string name="boton_cambie_de_peso">Weight Change</string>
    <string name="boton_que_comi_hoy">record Food</string>
    <string name="boton_el_peso_que_deseo">The weight Wish</string>
    <string name="title_menu">Main menu</string>
    <string name="imc">Imc</string>
    <string name="estado">State</string>
    <string name="calorias_sugeridas">Suggested calories</string>
    <string name="dias_para_lograrlo">Days to achieve</string>
    <string name="dias">Days</string>
    <string name="el_peso_que_deseo">THE WEIGHT THAT I WANT</string>
    <string name="title_splash">BEWARE</string>
    <string name="title_quecomihoy">Record Food</string>
    <string name="carne_de_res">meat res</string>
    <string name="pescado">Fish</string>
    <string name="pollo">Chicken</string>
    <string name="carne_de_cerdo">Pork meat</string>
    <string name="arroz">Rice</string>
    <string name="frijol">Bean</string>
    <string name="pasta">Pasta</string>
    <string name="lenteja">Lentil</string>
    <string name="huevo">Egg</string>
    <string name="manzana">Apple</string>
    <string name="papa">dad</string>
    <string name="banano">Banana</string>
    <string name="mango">Mango</string>
    <string name="pera">Pear</string>
    <string name="leche">Milk</string>
    <string name="cafe">Coffe</string>
    <string name="chocolate"></string>
    <string name="tomate">Tomato</string>
    <string name="error_form"/>
    <string name="title_registro">Registry</string>
    <string name="name">Name</string>
    <string name="lastname">Last name</string>
    <string name="hint_name">Name</string>
    <string name="hint_lastname">Last name</string>
    <string name="edad">Age</string>
    <string name="genero">Gender</string>
    <string name="altura">Height</string>
    <string name="peso">Weight</string>
    <string name="hint_edad">Age</string>
    <string name="hint_genero">Gender</string>
    <string name="hint_altura">Height</string>
    <string name="boton_registro">Registry</string>
    <string name="titulo_registro">Registro</string>
    <string name="action_settings">Registro</string>
    <string name="title_activity_inicio_seccion">Login</string>
    <string name="title_activity_registro">Registrar</string>
    <string name="cambio"><![CDATA[Cambio de peso > </activity> <activity android:name=]]></string>
    <string name="title_registro_Comida">Registro comida</string>
    <string name="calendario">Calendario</string>
    <string name="m_titulo">karo</string>
    <string name="calenda">calendario</string>
    <string name="pesodeseo2">pesocalde</string>
    <string name="cambiopes">Cambiopes</string>
    <string name="registrocomid14">regisco</string>
</resources>
