<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"

    >

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:onClick="Clicked2"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="@dimen/top18"
        android:text="@string/boton_cambie_de_peso"
      />



    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="@dimen/top18"
        android:gravity="center_vertical"
        android:onClick="Clicked3"
        android:text="@string/boton_que_comi_hoy" />

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/top120"
        android:gravity="center_vertical"
        android:onClick="Clicked1"
        android:text="@string/boton_el_peso_que_deseo"
        />
    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/button4"
        android:text="@string/calendario"
        android:onClick="Clicked4"

        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button3"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/top36"
        android:text="@string/title_menu"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text30"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="58dp"
        android:text="@string/imc"
        android:textColor="#000000"
        android:textSize="@dimen/text23"
        android:textStyle="bold"
        android:padding="20dp"
        />

    <TextView

        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/estado"
        android:textColor="#000000"
        android:textSize="@dimen/text23"
        android:textStyle="bold"
        android:layout_marginLeft="18dp"
        />

    <TextView
         android:textColor="#000000"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/calorias_sugeridas"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"

        />

</RelativeLayout>
