<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/layoutCambiopeso"
    android:background="@drawable/fondo4">

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="@dimen/top40"
    android:text="@string/titlecambie_de_peso"
    android:textSize="@dimen/text30"
    android:textStyle="bold" />




<com.androidplot.xy.XYPlot
    android:id="@+id/mySimpleXYPlot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView3"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="@dimen/top26"
    title="Grafica de tu peso"/>

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/editText1"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="65dp"
    android:text="@string/asivas_con_tu_peso"
    android:textSize="@dimen/text17"
    android:textStyle="bold" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView1"
    android:layout_below="@+id/textView1"
    android:layout_marginTop="43dp"
    android:text="@string/minuevo_peso"
    android:textSize="@dimen/text17"
    android:textStyle="bold" />

<EditText
    android:id="@+id/editText1"
    android:layout_width="@dimen/width80"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/textView2"
    android:layout_alignBottom="@+id/textView2"
    android:layout_alignRight="@+id/textView3"
    android:ems="7"
    android:hint="@string/hintpeso" />

<Button

    android:id="@+id/Button01"
    style="@style/Base.Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/editText1"
    android:layout_alignBottom="@+id/editText1"
    android:layout_toRightOf="@+id/editText1"
    android:onClick="onClickGuardar"
    android:text="Guardar" />




</RelativeLayout>
